--- a/spoj_WI_LICYT/spoj_WI_LICYT.csproj
+++ b/spoj_WI_LICYT/spoj_WI_LICYT.csproj
@@ -50,7 +50,7 @@
     <Compile Include="PlotsCounter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReaderWriter.cs" />
+    <Compile Include="Reader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
